# project-config

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cpp-cmake-conan-build.yml
cmake/: ProjectConfigJUCEHelpers.cmake
cmake-presets/: conan.json  default.json
doxygen-mermaid/: README.md
presets/: conan.json
scripts/: doxygen-github-markdown-filter.py  test_doxygen_github_markdown_filter.py
